Remove unnecessary files

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ timezone: Europe/Budapest
 name: Gergely Polonkai
 paginate: 10
 paginate_path: "/blog/page/:num"
+exclude: ['README.md', 'Gemfile', 'Gemfile.lock', 'CNAME']
 
 # Build settings
 markdown: kramdown
