--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,8 @@ name: Gergely Polonkai
 paginate: 10
 paginate_path: "/blog/page/:num"
 exclude: ['README.md', 'Gemfile', 'Gemfile.lock', 'CNAME']
+gems:
+  - jekyll-gist
 
 # Build settings
 markdown: kramdown
