Add my Hashnode profile to the Contact menu

--- a/_data/contacts.yaml
+++ b/_data/contacts.yaml
@@ -25,3 +25,6 @@
 - text: deviantArt
   link: http://gergelypolonkai.deviantart.com
   image: deviantart.png
+- text: Hashnode
+  link: https://hashnode.com/@gergelypolonkai
+  image: hashnode.png
