Revert "Fix the well-known directory inclusion"
This reverts commit fc6c7c1f17881f828e89cbb0f4d25916c8f2b096.

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Gergely Polonkai
 paginate: 10
 paginate_path: "/blog/page/:num"
 exclude: ['README.md', 'Gemfile', 'Gemfile.lock', 'CNAME', ".hyde.el"]
-include: ['.well-known/keybase.txt']
+include: ['.well-known']
 plugins:
   - jekyll-gist
   - jekyll-paginate
