Add my Keybase profile to the contact list

--- a/_data/contacts.yaml
+++ b/_data/contacts.yaml
@@ -28,3 +28,6 @@
 - text: Hashnode
   link: https://hashnode.com/@gergelypolonkai
   image: hashnode.png
+- text: Keybase
+  link: https://keybase.io/gergelypolonkai
+  image: keybase.png
