Add my liberapay profile to the contacts list

--- a/_data/contacts.yaml
+++ b/_data/contacts.yaml
@@ -31,3 +31,6 @@
 - text: Keybase
   link: https://keybase.io/gergelypolonkai
   image: keybase.png
+- text: Liberapay
+  link: https://liberapay.com/gergelypolonkai
+  image: liberapay.png
