Add my Mastodon profile to the contact list

--- a/_data/contacts.yaml
+++ b/_data/contacts.yaml
@@ -34,3 +34,6 @@
 - text: Liberapay
   link: https://liberapay.com/gergelypolonkai
   image: liberapay.png
+- text: Mastodon
+  link: https://social.polonkai.eu/@gergely
+  image: mastodon.png
